<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/first_frame_bg"
        android:orientation="vertical"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/statusIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:background="@drawable/ic_connected" />

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_connected"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:layout_height="wrap_content" android:orientation="horizontal">
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/etFromDate"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:hint="@string/from_date_hint"
                    android:inputType="date" />

                <EditText
                    android:id="@+id/etEndDate"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:layout_marginTop="8dp"
                    android:focusableInTouchMode="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/end_date_hint"
                    android:textColor="@android:color/white"
                    android:inputType="date" />
            </LinearLayout>
            <Button
                android:id="@+id/btGetSMS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="#5c6bc0"
                android:layout_gravity="center_vertical"
                android:text="@string/button_get_sms"/>
        </LinearLayout>
        <Button
            android:id="@+id/btnResend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/button_resend"
            android:src="@drawable/ic_cached_black_24dp"
            android:text="@string/resend_button"
            android:textColor="@android:color/white">

        </Button>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#42a5f5">

        <ImageButton
            android:id="@+id/btnReload"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_cached_black_24dp"
            android:text="@string/reload_button"
            android:textColor="@android:color/white">

        </ImageButton>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvDepositMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="36dp"
            android:scrollbars="vertical" />
    </RelativeLayout>

</LinearLayout>